<resources>
    <string name="app_name">iMarkaz</string>
    <string name="share">Share</string>
    <string name="ok">ok</string>
    <string name="skip">Skip</string>
    <string name="login">Login</string>
    <string name="submit">Submit</string>
    <string name="Finger">FingerPrint</string>
    <string name="Enter">Enter</string>
    <string name="username">Username</string>
    <string name="LoginTo">Login To Your Account</string>
    <string name="password">Password</string>
    <string name="forget">Forgot Password?</string>
    <string name="forget_2">Forgot?</string>
    <string name="choose_user">Choose User Client</string>
    <string name="last_lgged_in_on">last lgged in on</string>
    <string name="total_portfolio_value">Total Portfolio Value</string>
    <string name="performance">Performance</string>
    <string name="asset_allocation_pie_chart">Asset Allocation PIE Chart</string>
    <string name="asset_class">Asset Class</string>
    <string name="geographical">Geographical</string>
    <string name="sector">Sector</string>
    <string name="currency">Currency</string>
    <string name="activities_transactions">Activities / transactions</string>
    <string name="reports">Reports</string>
    <string name="notifications">Notifications</string>
    <string name="general">General</string>
    <string name="provide_info">Provide Specific Information</string>
    <string name="NAV">NAV Updates</string>
    <string name="KYC">KYC Expiry</string>
    <string name="logout_message">Are You Sure You Want To LogOut?</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="about">About Us</string>
    <string name="logout">Logout</string>
    <string name="cash">Cash</string>
    <string name="action">Take action now</string>

    <string name="total_cash">Total Cash Position</string>
    <string name="gain_loss">Gain/Loss</string>
    <string name="equities">Equities</string>
    <string name="qnt">Qnt:</string>
    <string name="last_day">Last Day</string>
    <string name="mtd">MTD</string>
    <string name="security">Security</string>
    <string name="wtd">WTD</string>
    <string name="ytd">YTD</string>
    <string name="inception">Inception</string>
    <string name="chart">Chart</string>
    <string name="portfolio">Portfolio</string>
    <string name="percentage">Percentage</string>
    <string name="benchmark">Benchmark</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="markaz_email">almarkaz@info.com</string>
    <string name="markaz_phone">00 965 468 374</string>
    <string name="google_maps_key" translatable="false">AIzaSyAn--autuSz4xETI4vX6plt0ZWUE79VYIk</string>

    <string name="contact_us">Contact Us</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="dialog_ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="check_empty_fields">Please check empty field</string>
    <string name="welcome_mr">Welcome Mr.</string>
    <string name="portfolio_name">Portfolio Name</string>
    <string name="portfolio_kwd">Portfolio KWD</string>
    <string name="cash_aft">Cash AFT</string>
    <string name="deposits">Deposits</string>
    <string name="blocked">Blocked</string>
    <string name="div_due">Div Due</string>
    <string name="other_receivable">Other Receivables</string>
    <string name="mngt_fees">Mngt Fees Due</string>
    <string name="other_payable">Other Payables</string>
    <string name="tcash_position">T cash position</string>

    <string name="download_failed">Download failed you should allow permission to storage</string>
    <string name="downloading">Downloading...</string>
    <string name="download_complete">Download Complete</string>
    <string name="language">Language</string>

    <string name="f_arabic" translatable="false">عربي</string>
    <string name="f_english" translatable="false">English</string>
    <string name="version">Version</string>
    <string name="biometric_login">Biometric Login</string>
    <string name="current_currency">Current Currency</string>
    <string name="chat">Chat with us</string>
    <string name="feedback">Leave feedback</string>
    <string name="KYC_expire">Your KYC is about expire</string>
    <string name="fragment_message">Tum dicere exorsus est elignedi optio, cumque nihli impedit, quo</string>

    <string name="update_message">New version is available, please update</string>
    <string name="update_title">Update Available</string>
    <string name="update_button">Update</string>
    <string name="update_cancel">Cancel</string>

    <string name="notification_error_ssl_cert_invalid">Invalid certificate</string>
    <string name="start_title_1">Our Knowledge powers your assets</string>
    <string name="start_desc_1">Award winnig investment services since 1974</string>
    <string name="start_title_3">Our success is centered around you</string>
    <string name="start_desc_2">Our interest is to earn you interest</string>
    <string name="start_title_2">Informing advice and lasting relations</string>
    <string name="start_desc_3">Your success is our success</string>
    <string name="lest_start">Let\'s Start</string>

    <string name="activity">Activity</string>
    <string name="home">Home</string>

    <string name="more">More</string>
    <string name="overview">Overview</string>
    <string name="allocation">Allocation</string>
    <string name="active">Active</string>
    <string name="total_holdings">Total holdings</string>
    <string name="holdings">Holdings</string>
    <string name="buy">Buy</string>
    <string name="report_format">Report Format</string>
    <string name="select_report">Select report</string>
    <string name="view">View</string>
    <string name="email">Email</string>
    <string name="please_select_your_language">Please select your language</string>
    <string name="choose_image">string_choose_image</string>
    <string name="for_exesting_investments">For exesting investments</string>
    <string name="for_new_investments">For new investments</string>
    <string name="no_client_account_msg">Your account does not have any client yet, you still can continue</string>
    <string name="year_to_date">Year to date</string>
    <string name="view_top_5_holdings">View Top 5 holdings</string>
    <string name="yesterday">Yesterday</string>
    <string name="month_to_date">Month to date</string>
    <string name="markaz_robot">Markaz Robot</string>
    <string name="markaz_wealth">Markaz Wealth</string>
    <string name="dd_mm_yyyy">DD/MM/YYYY</string>
    <string name="you_can_only_get_reports_from_04_05_2020">You can only get reports from </string>
    <string name="our_knowledge_power_your_assets">Our Knowledge power your assets</string>
    <string name="award_winning_investment_services_since_1974">Award winning investment services since 1974</string>
    <string name="assets">Assets</string>
    <string name="payables">Payables</string>
    <string name="receivables">Receivables</string>
    <string name="sell">Sell</string>
    <string name="have_you_tried_smart_advisor">Have you tried Smart Advisor?</string>
    <string name="comming_soon">Comming soon</string>
    <string name="stock">Stock</string>
    <string name="unit_cost">Unit Cost</string>
    <string name="plz_allow_access">Please allow access to change image</string>
    <string name="unable_pick">Unable to pick image</string>
    <string name="unable_to_load">unable to load</string>
    <string name="try_again">Someting went wrong please try again</string>
    <string name="quantity">Quantity</string>
    <string name="unit_price">Unit Price</string>
    <string name="avarage_cost">Avarage cost</string>
    <string name="realized_gl">Realized G/L</string>
    <string name="auth_succeed">Authentication succeeded!</string>
    <string name="cash_available">Cash available</string>
    <string name="payable_receivable">Payables/receivables</string>
    <string name="loans">Loans</string>
    <string name="plz_chs_from_date">please choose from date</string>
    <string name="plz_chs_to_date">please choose To date</string>
    <string name="select_portfolio">Select Portfolio</string>
    <string name="pdf">PDF</string>
    <string name="word">Word</string>
    <string name="excel">Excel</string>
    <string name="no_data">No Data</string>
    <string name="total_cost">Total Cost</string>
    <string name="close_price">Close Price</string>
    <string name="total_value">Total Value</string>
    <string name="unrealize_pl">Unrealize PL</string>
    <string name="unrealizepl_per">Unrealize PL%</string>
    <string name="realize_pl_ytd">Realized PL YTD</string>
    <string name="cash_divended">Cash Dividend</string>
    <string name="qty_aft">Quantity (AFT)</string>
    <string name="total_account_value">Total account value</string>
    <string name="units">Units</string>
    <string name="nav">NAV</string>
    <string name="plz_choose_report">Please choose report</string>
    <string name="sure_leave">Are you sure you want to leave the App ?</string>

    <string name="loading_portfolios">loading portfolios...</string>
    <string name="portfolio_must_be_selected">"A portfolio must be selected"</string>
    <string name="cash_ava">Cash Ava For Trading</string>
    <string name="cash_div_due">Cash Div Due</string>
    <string name="recievable_interest_due">Receivable Interest Due</string>
    <string name="fees">Fees</string>
    <string name="payable_interest">Payable Interest</string>
    <string name="payable_others">Payable Others</string>
    <string name="choose_currency">Choose Currency</string>
    <string name="continue_1">Continue</string>
    <string name="plz_choose_currency">Please Choose Currency</string>
    <string name="per_ytd">% YTD Performance</string>
</resources>
