<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/big_margin"
            android:gravity="center"
            >

        <com.ids.markaz.custom.CustomTextViewMedium
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/asset_class"
                android:id="@+id/tvTabAsset"
                android:textColor="@color/text_blue_normal"
                android:textSize="@dimen/small_font"/>

        <com.ids.markaz.custom.CustomTextViewMedium
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/small_font"
                android:id="@+id/tvTabGeographical"
                android:textColor="@color/gray_text_light"
                android:layout_marginLeft="@dimen/small_margin"
                android:layout_marginStart="@dimen/small_margin"
                android:text="@string/geographical"
                />

        <com.ids.markaz.custom.CustomTextViewMedium
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/small_font"
                android:layout_marginLeft="@dimen/small_margin"
                android:layout_marginStart="@dimen/small_margin"
                android:id="@+id/tvTabSector"
                android:textColor="@color/gray_text_light"
                android:text="@string/sector"
                />

        <com.ids.markaz.custom.CustomTextViewMedium
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/small_font"
                android:layout_marginLeft="@dimen/small_margin"
                android:id="@+id/tvTabCurrency"
                android:textColor="@color/gray_text_light"
                android:layout_marginStart="@dimen/small_margin"
                android:text="@string/currency"
                />

    </LinearLayout>
</LinearLayout>