<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_start"

        android:orientation="vertical"
        >
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/big_margin"
                android:background="@drawable/bg_start"
                android:orientation="vertical">
            <ImageView
                    android:layout_width="250dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="40dp"
                    android:src="@drawable/logo_white"
                    />

            <LinearLayout

                    android:layout_marginTop="@dimen/big_margin"
                    android:layout_marginBottom="@dimen/big_margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                <com.ids.markaz.custom.CustomTextViewMedium


                        android:textSize="@dimen/big_font"
                        android:textColor="@color/white"
                        android:text="@string/forget"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        />

            </LinearLayout>


            <LinearLayout
                    android:background="@drawable/background_rectangular_white"
                    android:orientation="vertical"

                    android:padding="@dimen/second_margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                <com.ids.markaz.custom.CustomTextViewMedium
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/small_font"
                        android:layout_marginTop="@dimen/second_margin"
                        android:text="@string/username"
                        android:paddingStart="@dimen/mini_margin"
                        android:paddingLeft="@dimen/mini_margin"
                        />

                <EditText
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/edit_text_height"
                        android:background="#00000000"
                        android:textSize="@dimen/font"
                        android:hint="@string/Enter"
                        android:paddingLeft="@dimen/mini_margin"
                        android:paddingRight="@dimen/normal_margin"
                        android:paddingStart="@dimen/mini_margin"
                        android:paddingEnd="@dimen/normal_margin"
                        android:textColor="@color/black"
                        android:textColorHint="@color/gray_shadow"
                        android:id="@+id/etUsrnameF"
                        android:layout_marginTop="@dimen/small_margin"/>



                <LinearLayout
                        android:background="#efefef"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"/>











                <LinearLayout
                        android:layout_marginTop="@dimen/second_margin"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center">




                    <LinearLayout


                            android:background="@drawable/rounded_main"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:id="@+id/btSubmit"
                            >

                        <com.ids.markaz.custom.CustomTextViewBold
                                android:layout_width="@dimen/button_width"
                                android:layout_height="@dimen/button_height"
                                android:text="@string/submit"
                                android:textColor="@color/white"
                                android:padding="5dp"
                                android:textSize="@dimen/font"
                                android:layout_gravity="center"
                                android:gravity="center"
                                />
                    </LinearLayout>









                </LinearLayout>

            </LinearLayout>

        </LinearLayout>


        <include layout="@layout/loading_trans"/>

    </RelativeLayout>


</LinearLayout>