<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent">



    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
        <include layout="@layout/toolbar_general"/>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/rounded_white_frame"

                android:paddingTop="@dimen/big_margin"
                android:paddingBottom="@dimen/big_margin"

                android:layout_marginTop="@dimen/layout_elevation"
                android:orientation="vertical">






            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/home_tab_height"
                    android:layout_marginTop="@dimen/second_margin"
                    android:layout_marginRight="@dimen/second_margin"
                    android:layout_marginLeft="@dimen/second_margin"
                    android:background="@drawable/rectangular_gray"
                    android:orientation="horizontal">

                <com.ids.markaz.custom.CustomTextViewBold
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_margin="1dp"
                        android:textSize="@dimen/font"
                        android:textColor="@color/white"
                        android:id="@+id/btTabLastday"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/last_day"
                        android:background="@drawable/background_rectangular_primary"
                        android:layout_height="match_parent"/>

                <com.ids.markaz.custom.CustomTextViewBold
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:id="@+id/btTabWtd"
                        android:layout_margin="1dp"
                        android:text="@string/wtd"
                        android:textSize="@dimen/font"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:textColor="@color/tab_text_colo"
                        android:layout_height="match_parent"/>

                <com.ids.markaz.custom.CustomTextViewBold
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_margin="1dp"
                        android:id="@+id/btTabMtd"
                        android:text="@string/mtd"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:textColor="@color/tab_text_colo"
                        android:textSize="@dimen/font"
                        android:layout_height="match_parent"/>

            </LinearLayout>

            <include layout="@layout/loading"/>
            <androidx.core.widget.NestedScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/second_margin"
                    >

                <androidx.recyclerview.widget.RecyclerView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/rvActivityTransactions"
                        />
            </androidx.core.widget.NestedScrollView>









        </LinearLayout>




    </LinearLayout>


</LinearLayout>